[gd_scene load_steps=4 format=3 uid="uid://dsjsweu6ddg3e"]

[ext_resource type="Script" uid="uid://ua3ocvqr7kgd" path="res://ExperienceSystem/experience_ui.gd" id="1_d6n6q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vj8kh"]
bg_color = Color(0.28485, 0.28485, 0.28485, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlb2r"]
bg_color = Color(1, 1, 1, 1)

[node name="ExperienceUI" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_top = 4.0
offset_right = 576.0
offset_bottom = 25.0
grow_horizontal = 2
pivot_offset = Vector2(576, 0)
script = ExtResource("1_d6n6q")

[node name="ExperienceBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -497.0
offset_right = 550.0
offset_bottom = 19.0
grow_horizontal = 2
pivot_offset = Vector2(550, 0)
theme_override_styles/background = SubResource("StyleBoxFlat_vj8kh")
theme_override_styles/fill = SubResource("StyleBoxFlat_mlb2r")
value = 60.0
show_percentage = false

[node name="ExperienceNumber" type="Label" parent="ExperienceBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3

[node name="LevelNumber" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_top = -1.0
offset_right = -500.0
offset_bottom = 22.0
grow_horizontal = 2
pivot_offset = Vector2(20, 11.5)
horizontal_alignment = 1
vertical_alignment = 1
